fix zero output + overflow direction

--- a/styles/calc-output/calc-output__equation.css
+++ b/styles/calc-output/calc-output__equation.css
@@ -1,5 +1,5 @@
 .calc-output__equation {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-size: 20px;
     letter-spacing: -2px;
 }
