--- a/styles/calc-output/calc-output__inpit.css
+++ b/styles/calc-output/calc-output__inpit.css
@@ -1,4 +1,6 @@
 .calc-output__input {
     font-size: 46px;
+    display: block;
+    float: right;
 }
 
